syntax = "proto3";

package proto;

option go_package = "github.com/francisco3ferraz/conductor/api/proto";

import "google/protobuf/timestamp.proto";

// MasterService handles job submission, status queries, and worker communication
service MasterService {
  rpc SubmitJob(SubmitJobRequest) returns (SubmitJobResponse);
  rpc GetJobStatus(GetJobStatusRequest) returns (GetJobStatusResponse);
  rpc ListJobs(ListJobsRequest) returns (ListJobsResponse);
  rpc CancelJob(CancelJobRequest) returns (CancelJobResponse);
  rpc JoinCluster(JoinClusterRequest) returns (JoinClusterResponse);
  
  // Worker communication (worker → master)
  rpc RegisterWorker(RegisterWorkerRequest) returns (RegisterWorkerResponse);
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
  rpc ReportResult(ReportResultRequest) returns (ReportResultResponse);

  // Dead Letter Queue operations
  rpc ListDLQ(ListDLQRequest) returns (ListDLQResponse);
  rpc RetryFromDLQ(RetryFromDLQRequest) returns (RetryFromDLQResponse);

  // Cluster state and health
  rpc GetClusterHealth(GetClusterHealthRequest) returns (GetClusterHealthResponse);
  rpc ListWorkers(ListWorkersRequest) returns (ListWorkersResponse);
}

// Job submission request
message SubmitJobRequest {
  string type = 1;           // Job type: "image_processing", "web_scraping", "data_analysis"
  bytes payload = 2;         // Job payload
  int32 priority = 3;        // Job priority (higher = more important)
  int32 max_retries = 4;     // Maximum retry attempts
  int64 timeout_seconds = 5; // Job timeout in seconds
}

message SubmitJobResponse {
  string job_id = 1;
  string status = 2;
  string message = 3;
}

// Job status query
message GetJobStatusRequest {
  string job_id = 1;
}

message GetJobStatusResponse {
  Job job = 1;
}

// List jobs
message ListJobsRequest {
  string status_filter = 1;  // Filter by status (optional)
  int32 limit = 2;           // Maximum number of jobs to return
  int32 offset = 3;          // Pagination offset
}

message ListJobsResponse {
  repeated Job jobs = 1;
  int32 total = 2;
}

// Cancel job
message CancelJobRequest {
  string job_id = 1;
}

message CancelJobResponse {
  bool success = 1;
  string message = 2;
}

// Job model
message Job {
  string id = 1;
  string type = 2;
  bytes payload = 3;
  int32 priority = 4;
  string status = 5;          // "pending", "assigned", "running", "completed", "failed", "cancelled"
  string assigned_to = 6;     // Worker ID
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp started_at = 8;
  google.protobuf.Timestamp completed_at = 9;
  JobResult result = 10;
  int32 retry_count = 11;
  int32 max_retries = 12;
  string error_message = 13;
  int64 timeout_seconds = 14;  // Job timeout in seconds (0 = no timeout)
}

message JobResult {
  bool success = 1;
  bytes output = 2;
  string error = 3;
  int64 duration_ms = 4;
}

// Cluster membership
message JoinClusterRequest {
  string node_id = 1;
  string address = 2;  // Raft bind address of joining node
}

message JoinClusterResponse {
  bool success = 1;
  string message = 2;
  string leader = 3;   // Current leader address
}

// Worker communication messages (worker → master)
message RegisterWorkerRequest {
  string worker_id = 1;
  string address = 2;
  int32 max_concurrent_jobs = 3;
  map<string, string> capabilities = 4;  // Worker capabilities/tags
}

message RegisterWorkerResponse {
  bool success = 1;
  string message = 2;
}

message HeartbeatRequest {
  string worker_id = 1;
  WorkerStats stats = 2;
}

message HeartbeatResponse {
  bool ack = 1;
  int32 assigned_jobs_count = 2;  // Number of jobs assigned to this worker
}

message WorkerStats {
  int32 active_jobs = 1;
  int32 completed_jobs = 2;
  int32 failed_jobs = 3;
  double cpu_usage = 4;
  double memory_usage = 5;
}

message ReportResultRequest {
  string job_id = 1;
  string worker_id = 2;
  JobResult result = 3;
}

message ReportResultResponse {
  bool success = 1;
  string message = 2;
}

// Dead Letter Queue operations
message ListDLQRequest {
  int32 limit = 1;   // Maximum number of jobs to return
  int32 offset = 2;  // Pagination offset
}

message ListDLQResponse {
  repeated Job jobs = 1;
  int32 total = 2;
}

message RetryFromDLQRequest {
  string job_id = 1;
}

message RetryFromDLQResponse {
  bool success = 1;
  string message = 2;
}

// Cluster health and status
message GetClusterHealthRequest {
}

message GetClusterHealthResponse {
  string leader_id = 1;           // Current Raft leader node ID
  string leader_address = 2;      // Current leader's address
  bool is_leader = 3;             // Whether this node is the leader
  int32 worker_count = 4;         // Total number of registered workers
  int32 active_worker_count = 5;  // Number of active workers
  int32 pending_jobs = 6;         // Number of pending jobs
  int32 running_jobs = 7;         // Number of running jobs
  int32 dlq_jobs = 8;             // Number of jobs in DLQ
  string raft_state = 9;          // Raft state: "Leader", "Follower", "Candidate"
}

message ListWorkersRequest {
  string status_filter = 1;  // Filter by status: "active", "inactive", "dead" (optional)
}

message ListWorkersResponse {
  repeated WorkerInfo workers = 1;
  int32 total = 2;
}

message WorkerInfo {
  string id = 1;
  string address = 2;
  int32 max_concurrent_jobs = 3;
  int32 active_jobs = 4;
  string status = 5;              // "active", "inactive", "dead"
  google.protobuf.Timestamp last_heartbeat = 6;
  map<string, string> capabilities = 7;
}
